fix dist. sensor ping_trig counter WL. Improved values for CoCoTB sim and improved free run TC

--- a/projects/arty_s7_atrover/tb/Makefile
+++ b/projects/arty_s7_atrover/tb/Makefile
@@ -142,4 +142,4 @@ clean::
 	rm -fr __pycache__ sim_build
 	rm -fr `find ../ -name "__pycache__"`
 	rm -rf iverilog_dump.v
-	rm -rf dump.$(WAVE_FMT)
+	rm -rf dump.$(WAVE_FMT)*
